--- a/README
+++ b/README
@@ -1,10 +1,11 @@
-              ==============================================
-              panic_barrier - block until some thread panics
-              ==============================================
+                                 =============
+                                 panic_barrier
+                                 =============
 
 Create a global panic barrier using lazy_static, and initialise it from your
-main thread.  Any thread can then block on the barrier.  If any thread panics,
-all threads which are waiting on the barrier will immediately unblock.
+main thread.  After that, any thread can use the barrier to wait for threads to
+panic.  Each call to PanicBarrier::wait() can specify a different set of
+watched threads.
 
     lazy_static! {
         static ref PANIC_BARRIER: PanicBarrier = PanicBarrier::new();
@@ -14,17 +15,17 @@ all threads which are waiting on the barrier will immediately unblock.
         // Initialise the PanicBarrier
         PANIC_BARRIER.init();
 
-        thread::spawn(|| {
+        let h1 = thread::spawn(|| {
             thread::sleep(Duration::from_millis(100));
             panic!();
         });
 
-        let h = thread::spawn(|| {
-            PANIC_BARRIER.wait();
+        let h2 = thread::spawn(|| {
+            PANIC_BARRIER.wait(&[h1.thread().id()]);
             println!("ok!");
         });
 
-        h.join().unwrap();
+        h2.join().unwrap();
     }
 
 LICENCE
